Pushed minor update to database

--- a/LiveConcertsDB/Views/Home/About.cshtml
+++ b/LiveConcertsDB/Views/Home/About.cshtml
@@ -1,7 +1,10 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "LiveConcertsDB";
+    ViewBag.Message = "";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>You can use this page as way to keep track of all the live concerts that you have 
+    attended. Along with tracking the artists themselves, you will also be able to input
+    the Venue, Date, and Time of the concert.</p>
