Connected Concert Context to index page, changed some minor text on the modal window

--- a/LiveConcertsDB/Views/Home/Index.cshtml
+++ b/LiveConcertsDB/Views/Home/Index.cshtml
@@ -2,10 +2,12 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <h1 class="display-4">LiveConcertsDB</h1>
+        <p class="lead">Welcome to LiveConcertsDB. Clicking the Concerts button on the navigation bar will take you to a database where you can store
+        all of the live concerts you attend. If you are a live music lover like myself, this will help you remember all the different bands you see, along 
+        with the different venues you have attended.</p>
+    </div>
 </div>
 
-<div class="row">
-
-</div>
