--- a/LiveConcertsDB/Views/Concerts/Details.cshtml
+++ b/LiveConcertsDB/Views/Concerts/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Concert Details</h2>
 
 <div>
-    <h4>Concert</h4>
+    <h4></h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
